General cumulative update